# dualsense-ros2

./: .gitignore  INSTALL.md  README.md
custom_messages/: CMakeLists.txt  package.xml
custom_messages/msg/: DualSenseFeedback.msg  Gamepad.msg
dualsense/: README.md  package.xml  setup.cfg  setup.py
dualsense/dualsense/: dualsense_node.py
dualsense/launch/: dualsense.launch.py
